@@ -71,12 +71,13 @@ jtag::jtag(void)
   oldtioValid = is_usb = false;
 }
 
-jtag::jtag(const char *jtagDeviceName, char *name)
+jtag::jtag(const char *jtagDeviceName, char *name, emulator type)
 {
     struct termios newtio;
 
     device_name = name;
     is_usb = false;
+    emu_type = type;
 #ifdef HAVE_LIBUSB
     if (strncmp(jtagDeviceName, "usb", 3) == 0)
       {
